[gd_scene load_steps=6 format=3 uid="uid://duus13ngbb8og"]

[ext_resource type="Script" path="res://Code/levelIcon.gd" id="1_qqypa"]
[ext_resource type="Texture2D" uid="uid://byvjm7kagi452" path="res://art/icon.svg" id="2_vbtw6"]
[ext_resource type="Theme" uid="uid://c37q7rv7x4x28" path="res://Theme/RemapButton.tres" id="3_hx1jn"]
[ext_resource type="Texture2D" uid="uid://btcf6u2gkrprg" path="res://art/Ui/lets cook button.png" id="4_yk1t1"]
[ext_resource type="Texture2D" uid="uid://cncs7fnovhi7q" path="res://art/Ui/lets cook hover.png" id="5_0fb4x"]

[node name="level" type="Control" node_paths=PackedStringArray("Layer", "backbutton")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = 5.0
offset_right = -1459.0
offset_bottom = -767.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1_qqypa")
Layer = NodePath("CanvasLayer")
backbutton = NodePath("CanvasLayer/back")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("2_vbtw6")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = -64.0
offset_top = -44.0
offset_right = 188.0
offset_bottom = -8.0
theme = ExtResource("3_hx1jn")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center] Level 1"
fit_content = true
scroll_active = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_right = 1600.0
offset_bottom = 900.0

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -362.0
offset_top = -445.0
offset_right = 350.0
offset_bottom = -326.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_hx1jn")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center] Level 1"
fit_content = true
scroll_active = false

[node name="back" type="Button" parent="CanvasLayer" groups=["Button"]]
offset_left = 1198.0
offset_top = 799.0
offset_right = 1598.0
offset_bottom = 899.0
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Cook")
focus_neighbor_bottom = NodePath("../Cook")
theme = ExtResource("3_hx1jn")
theme_override_font_sizes/font_size = 48
text = "Back"

[node name="Cook" type="TextureButton" parent="CanvasLayer" groups=["Button"]]
offset_left = 553.0
offset_top = 403.0
offset_right = 1050.0
offset_bottom = 543.0
size_flags_vertical = 3
focus_neighbor_top = NodePath("../back")
focus_neighbor_bottom = NodePath(".")
focus_mode = 1
theme = ExtResource("3_hx1jn")
texture_normal = ExtResource("4_yk1t1")
texture_pressed = ExtResource("5_0fb4x")
texture_hover = ExtResource("5_0fb4x")
texture_focused = ExtResource("5_0fb4x")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="CanvasLayer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/Cook" to="." method="LoadLevel"]
